--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
@@ -29,7 +29,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '25.0.0'
 
     lintOptions {
         abortOnError false
@@ -84,4 +84,4 @@ task copyNativeLibs(type: Copy) {
 
 copyNativeLibs.dependsOn buildNative
 assemble.dependsOn copyNativeLibs
-assembleDebug.dependsOn copyNativeLibs
+//assembleDebug.dependsOn copyNativeLibs
